--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 offset-md-1">
-                        <a href="#" class="subheader_logo"><img src="/src/icons/Uber.png" alt="logo"></a>
+                        <a href="#" class="subheader_logo"><img src="/icons/Uber.png" alt="logo"></a>
                         <div class="subheader_official">Официальный партнер Uber в Москве</div>
                     </div>
                     <div class="col-md-2 offset-md-2">
@@ -59,6 +59,26 @@
         </div>
       
     </header>
+
+    <section class="promo">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 offset-md-1">
+                    <h1 class="promo_header">компания uber Partners!</h1>
+                    <h2 class="promo_subheader">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
+                    <div class="promo_descr">Компания UBER  динамически развивающаяся. Компания на рынке        занимает лидирующее место средитаксомоторных компаний, Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете. Бонуcная система.Помимо выполненной работы по заказам, компания начисляет бонусы запиковое время.
+                    <br></br>
+                        Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе Москве.  Водители у насзарабатывают от 80000- 120000 в месяц.
+                    </div>
+
+                    <button class="promo_btn">ОТПРАВИТЬ ЗАЯВКУ!</button>
+
+
+
+                </div>
+            </div>
+        </div>
+    </section>
    
 
 
