--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Uber</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&amp;subset=cyrillic-ext" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
@@ -172,7 +172,6 @@
                                 Вам не нужно менять цвет, устанавливать «шашки» на автомобиль и обклеивать его наклейками.
                             </div>
                         </div>
-                        
                     </div>
                 </div>
             </div>
@@ -181,43 +180,56 @@
 
     <section class="mobile">
         <div class="container">
-            <div class="label">Возможности</div>
-            <div class="title">мобильное приложение убер</div>
+            <div class="label">возможности</div>
+            <h2 class="title">мобильное приложение убер</h2>
             <div class="subtitle">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон</div>
+
             <div class="row">
                 <div class="col-md-4">
                     <div class="mobile_item mobile_item_1">
-                        <div class="mobile_item_subtitle">оформление заказа одним касанием</div>
+                        <div class="mobile_item_subtitle">
+                            оформление заказа одним касанием
+                        </div>
                         <div class="mobile_item_plus"><img src="icons/plus.png" alt="plus"></div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mobile_item mobile_item_2">
-                        <div class="mobile_item_subtitle">надежная подача</div>
+                        <div class="mobile_item_subtitle">
+                            надежная подача
+                        </div>
                         <div class="mobile_item_plus"><img src="icons/plus.png" alt="plus"></div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mobile_item mobile_item_3">
-                        <div class="mobile_item_subtitle">прозрачные цены</div>
+                        <div class="mobile_item_subtitle">
+                            прозрачные цены
+                        </div>
                         <div class="mobile_item_plus"><img src="icons/plus.png" alt="plus"></div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mobile_item mobile_item_4">
-                        <div class="mobile_item_subtitle">безналичная оплата</div>
+                        <div class="mobile_item_subtitle">
+                            безналичная оплата
+                        </div>
                         <div class="mobile_item_plus"><img src="icons/plus.png" alt="plus"></div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mobile_item mobile_item_5">
-                        <div class="mobile_item_subtitle">обратная связь</div>
+                        <div class="mobile_item_subtitle">
+                            обратная связь
+                        </div>
                         <div class="mobile_item_plus"><img src="icons/plus.png" alt="plus"></div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mobile_item mobile_item_6">
-                        <div class="mobile_item_subtitle">разделить стоимость поездки</div>
+                        <div class="mobile_item_subtitle">
+                            разделить стоимость поездки
+                        </div>
                         <div class="mobile_item_plus"><img src="icons/plus.png" alt="plus"></div>
                     </div>
                 </div>
@@ -225,6 +237,20 @@
         </div>
     </section>
 
+    <section class="choice">
+        <div class="container">
+            <div class="black"></div>
+            <div class="label label_white">возможности</div>
+            <h2 class="title title_white">Выбор - отличная штука!</h2>
+            <div class="subtitle subtitle_white">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
+
+            <img src="img/car.png" alt="uber car" class="choice_img">
+            <div class="choice_descr">
+                Машины на каждый день.<br>
+                Лучше, быстрее и дешевле, чем такси
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
